# webfont-zh

./: .gitignore  Cargo.toml  Procfile  README.md  index.html  test.html
data/: chars.txt
data/fonts/SourceHanSans/: config.json
data/fonts/WenJinMincho/: config.json
data/fonts/plangothic/: config.json
src/: config.rs  error.rs  font.rs  handlers.rs  main.rs  service.rs  utils.rs
